remove attempt to fix spacing at top of page, as rejig of attachment of  custom content indicators to page means its unneeded [PT #188828155] / #104

--- a/src/applications/primo/www/components/search/searchResult/searchResultList/_search-result-list.scss
+++ b/src/applications/primo/www/components/search/searchResult/searchResultList/_search-result-list.scss
@@ -130,13 +130,6 @@ prm-search-result-list {
             &.first-in-page {
                 position: relative;
 
-                prm-brief-result-container {
-                    &:not(:has(.indicatorWrapper)) .result-item-actions,
-                    &:has(.indicatorWrapper) {
-                        margin-top: 11px
-                    }
-                }
-
                 .md-subheader {
                     height: 0;
                     position: relative;
